--- a/style.css
+++ b/style.css
@@ -124,7 +124,12 @@ main {
 .sponeser-img {
     display: flex;
     justify-content: space-evenly;
+    text-align: center;
 
+}
+
+.sponeser-img img {
+    width: 140px;
 }
 
 /**responsive medeia quary*/
@@ -136,7 +141,8 @@ main {
 
     nav,
     .facts-card-container,
-    .teams-contain {
+    .teams-contain,
+    .sponeser-img {
         flex-direction: column;
     }
 
@@ -146,11 +152,19 @@ main {
     }
 }
 
+/**footer style*/
+footer {
+    background-color: #FFF4E7;
+    text-align: center;
+    padding: 20px;
+}
+
 /**tablet*/
 @media screen and (min-width: 576px) and (max-width: 960px) {
 
     nav,
-    .teams-contain {
+    .teams-contain,
+    .sponeser-img {
         flex-direction: column;
     }
 
